# src
# Target is lib_LIBRARIES, right?
lib_LIBRARIES = libgibraltar.a
include_HEADERS = ../include/gibraltar.h

libgibraltar_a_SOURCES = gib_context.h gib_cpu_funcs.h gib_cuda_driver.c gib_galois.h gibraltar_cpu.c dynamic_fp.h gib_cpu_funcs.c gib_cuda_checksum.cu gib_galois.c gibraltar.c gibraltar_jerasure.c
libgibraltar_a_CPPFLAGS = -I../include
